After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692276 - Don't assume that secret_password_clear_sync() returns FALSE on error
Don't assume that secret_password_clear_sync() returns FALSE on error
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: Kerberos
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-01-22 10:59 UTC by Stef Walter
Modified: 2013-01-22 13:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't assume that secret_password_clear_sync() returns FALSE on error (2.34 KB, patch)
2013-01-22 10:59 UTC, Stef Walter
none Details | Review
Don't assume that secret_password_clear_sync() returns FALSE on error (2.12 KB, patch)
2013-01-22 12:43 UTC, Stef Walter
none Details | Review
Don't assume that secret_password_clear_sync() returns FALSE on error (2.12 KB, patch)
2013-01-22 12:46 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2013-01-22 10:59:09 UTC
When I delete an Online Account for which no password exists in the keyring
I get an erroneous error message saying that it failed to delete items
from the keyring.

This is due to the incorrect use of secret_password_clear_sync().
Comment 1 Stef Walter 2013-01-22 10:59:12 UTC
Created attachment 234092 [details] [review]
Don't assume that secret_password_clear_sync() returns FALSE on error

The secret_password_clear_sync() function returns whether items were
deleted or not, and returning FALSE does not indicate an error
condition.

Detect the error condition correctly, preventing erroneus error
prompts about not being able to delete stuff from the keyring.
Comment 2 Stef Walter 2013-01-22 12:43:10 UTC
Created attachment 234100 [details] [review]
Don't assume that secret_password_clear_sync() returns FALSE on error

The secret_password_clear_sync() function returns whether items were
deleted or not, and returning FALSE does not indicate an error
condition.

Detect the error condition correctly, preventing erroneus error
prompts about not being able to delete stuff from the keyring.
Comment 3 Stef Walter 2013-01-22 12:46:50 UTC
Created attachment 234101 [details] [review]
Don't assume that secret_password_clear_sync() returns FALSE on error

The secret_password_clear_sync() function returns whether items were
deleted or not, and returning FALSE does not indicate an error
condition.

Detect the error condition correctly, preventing erroneus error
prompts about not being able to delete stuff from the keyring.
Comment 4 Debarshi Ray 2013-01-22 13:11:42 UTC
Comment on attachment 234101 [details] [review]
Don't assume that secret_password_clear_sync() returns FALSE on error

Thanks for the patch. Committed and pushed as fe57f4830d114638310589f47b36269bf504246b after a very minor style fix.