Don't assume that secret_password_clear_sync() returns FALSE on error

The secret_password_clear_sync() function returns whether items were
deleted or not, and returning FALSE does not indicate an error
condition.

Detect the error condition correctly, preventing erroneus error
prompts about not being able to delete stuff from the keyring.

https://bugzilla.gnome.org/show_bug.cgi?id=692276